@@ -46,11 +46,7 @@ const char * lookup_wchan (int pid) {
 
    // lame ppc64 has a '.' in front of every name
    if (*ret=='.') ret++;
-   switch (*ret){
-      case 's': if(!strncmp(ret, "sys_", 4)) ret += 4; break;
-      case 'd': if(!strncmp(ret, "do_",  3)) ret += 3; break;
-      case '_': while(*ret=='_') ret++;                break;
-      default :                                        break;
-   }
+   while(*ret=='_') ret++;
+
    return ret;
 }
